[package]
name = "symbol-sdk"
version = "0.1.1-alpha.0"
authors = ["Puppet Black <blockpuppetblack0@gmail.com>"]
readme = "README.md"
license = "Apache-2.0"
repository = "https://github.com/BlockPuppets/symbol-sdk-rust"
keywords = ["symbol", "nem"]
categories = ["blockchain", "sdk"]
exclude = [".gitignore"]
edition = "2018"

[lib]
name = "symbol_sdk"
crate-type = ["lib"]

[dependencies.symbol-crypto-core]
git = "https://github.com/BlockPuppets/symbol-crypto-core"
features = ['serde', 'with_mnemonic']

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.typetag]
version = "^0.1"

[dependencies.serde_json]
version = "^1.0"

[dependencies.hex]
version = "^0.4"

[dependencies.base32]
version = "^0.4"

[dependencies.sha3]
version = "^0.8"
default-features = false

[dependencies.ripemd160]
version = "^0.8"

[dependencies.fixed-hash]
version = "0.3"

[dependencies.anyhow]
version = "1.0"

[dependencies.regex]
version = "^1"

[dependencies.rand]
version = "0.7"
default-features = false

[dependencies.byteorder]
version = "^1"

[dependencies.round]
version = "0.1.0"

[dependencies.async-trait]
version = "0.1.50"

[dependencies.url]
version = "2.2"

[dependencies.reqwest]
version = "0.11.3"
features = ["blocking", "json"]
default_features = false

[dependencies.tokio]
version = "1.6.0"
features = ["full"]

[dev-dependencies]
lazy_static = "1.4.0"